dodano: oprogramowano endpoint do sprawdzania czy tekst jest spamem
